--- a/book-시작하세요!_텐서플로_2.0_프로그래밍/5_3-multiclass_classification-fashion_mnist_dataset.ipynb
+++ b/book-시작하세요!_텐서플로_2.0_프로그래밍/5_3-multiclass_classification-fashion_mnist_dataset.ipynb
@@ -508,9 +508,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conda_amazonei_tensorflow2_p36",
    "language": "python",
-   "name": "python3"
+   "name": "conda_amazonei_tensorflow2_p36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -522,7 +522,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
